styles/all.scss
@import "./blueprint";

.app-grid {
  display: grid;
  grid-gap: 2rem;
}

@media (min-width: 50em) {
  .app-grid {
    grid-template-columns: auto auto auto;
  }
}

.app-input-page {
  font-size: 1rem;
  margin-bottom: 1rem;
  border: 2px solid;
  height: 10em;
  width: 10em;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  background-color: var(--app-input-page-background);
}

@media (max-width: 30em) {
  .app-input-page {  
    margin: auto;
  }
}

@media (min-width: 50em) {
  .app-input-page {  
    font-size: 2rem;
  }
}

.app-input-object {
  vertical-align: 6.25em;
  line-height: 6.25em;
  font-family: sans-serif;
  background: #DDD;
  height: 6.25em;
  width: 6.25em;
  border-radius: 50%;
  background-color: var(--app-input-object-background);
  color: var(--app-input-text-color);
}

.app-input-object-alpha {
  vertical-align: 6.25em;
  line-height: 6.25em;
  font-family: sans-serif;
  background: #DDD;
  height: 6.25em;
  width: 6.25em;
  border-radius: 50%;
  background-color: var(--app-input-object-alpha-background);
  color: var(--app-input-text-color);
}

.app-input-color {
  margin-top: 5px;
  vertical-align: bottom;
}

[hidden=true] {
  display: none !important;
}

.govuk-hint {
  font-size: 0.75rem;
  line-height: 1rem;
}

